added email cicle and dom element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>Email List API</title>
 </head>
 <body>
-    
+    <ul id="email-list">
+
+    </ul>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
